libgccjit: Add support for types used by atomic builtins [PR96066] [PR96067]

2021-12-11  Antoni Boucher  <bouanto@zoho.com>

gcc/jit/
	PR target/96066
	PR target/96067
	* jit-builtins.c: Implement missing types for builtins.
	* jit-recording.c:: Allow sending a volatile const void * as
	argument.
	* jit-recording.h: New functions (is_volatile, is_const) and
	allow comparing qualified types.

gcc/testsuite/
	PR target/96066
	PR target/96067
	* jit.dg/all-non-failing-tests.h: Add test-builtin-types.c.
	* jit.dg/test-builtin-types.c
	* jit.dg/test-error-bad-assignment.c
	* jit.dg/test-fuzzer.c: Add fuzzing for type qualifiers.

Signed-off-by: Antoni Boucher <bouanto@zoho.com>