gcc/testsuite/jit.dg/all-non-failing-tests.h
@@ -188,6 +188,13 @@
 #undef create_code
 #undef verify_code
 
+/* test-builtin-types.c */
+#define create_code create_code_builtin_types
+#define verify_code verify_code_builtin_types
+#include "test-builtin-types.c"
+#undef create_code
+#undef verify_code
+
 /* test-hello-world.c */
 #define create_code create_code_hello_world
 #define verify_code verify_code_hello_world
@@ -411,6 +418,9 @@ const struct testcase testcases[] = {
   {"functions",
    create_code_functions,
    verify_code_functions},
+  {"builtin-types",
+   create_code_builtin_types,
+   verify_code_builtin_types},
   {"hello_world",
    create_code_hello_world,
    verify_code_hello_world},
